--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-passport-logout": "^0.1.0",
     "express-session": "^1.15.4",
     "massive": "^3.1.0",
     "passport": "^0.3.2",
