--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^4.1.2",
     "react-scripts": "^1.0.10",
     "redux": "^3.7.2",
+    "redux-promise-middleware": "^4.3.0",
     "s": "^0.1.1"
   },
   "scripts": {
