--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.15.3",
     "express-passport-logout": "^0.1.0",
     "express-session": "^1.15.4",
+    "lodash": "^4.17.4",
     "massive": "^3.1.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
