--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "^1.0.10",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^4.3.0",
-    "s": "^0.1.1"
+    "s": "^0.1.1",
+    "semantic-ui-react": "^0.71.3"
   },
   "scripts": {
     "start": "react-scripts start",
