--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
+    "react-bootstrap-typeahead": "^2.0.0-alpha.3",
     "react-dom": "^15.6.1",
     "react-media": "^1.6.1",
     "react-redux": "^5.0.5",
