AWS imported and saving photos

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=4000
 DATABASE_URL=postgres://znrrremg:ZsMBABlvic6N5YmFe5zN9qxn028aeBh8@pellefant.db.elephantsql.com:5432/znrrremg
+AWS_ACCESSKEYID=AKIAJRLPKERJ5MKMRBQQ
+AWS_SECRETACCESSKEY=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
+AWS_REGION=us-east-2
+BUCKET_NAME=one-stop-profile-pics
