--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.95.0",
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
@@ -17,8 +18,8 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
-    "react-day-picker": "^6.1.0",
     "react-bootstrap-typeahead": "^2.0.0-alpha.3",
+    "react-day-picker": "^6.1.0",
     "react-dom": "^15.6.1",
     "react-media": "^1.6.1",
     "react-redux": "^5.0.5",
